--- a/preview/frontend/index.html
+++ b/preview/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React App</title>
+    <title>Pulse App</title>
   </head>
   <body style="height: 100vh; width: 100vw">
-    <div id="root" style="height: 100%; width: 100%;"></div>
+    <div id="root" style="height: 100%; width: 100%"></div>
   </body>
 </html>
